--- a/index.html
+++ b/index.html
@@ -9,130 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-  <style>
-    :root {
-      --primary: #2563eb;
-      --accent: #06b6d4;
-      --text: #0f172a;
-      --bg: #f8fafc;
-      --border: #e2e8f0;
-    }
-
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    html { scroll-behavior: smooth; }
-    body {
-      font-family: 'Inter', sans-serif;
-      background: var(--bg);
-      line-height: 1.6;
-    }
-
-    nav {
-      background: rgba(255, 255, 255, 0.9);
-      backdrop-filter: blur(12px);
-      padding: 1.4rem 2rem;
-      border-bottom: 1px solid var(--border);
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.04);
-    }
-
-    .nav-container {
-      max-width: 1200px;
-      margin: 0 auto;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .logo {
-      height: auto;
-      max-height: 90px;
-      object-fit: contain;
-    }
-
-    .nav-links {
-      list-style: none;
-      display: flex;
-      gap: 2.5rem;
-    }
-
-    .nav-links a {
-      position: relative;
-      font-size: 1.05rem;
-      font-weight: 500;
-      text-decoration: none;
-      color: var(--text);
-      padding: 0.25rem 0;
-      transition: color 0.3s ease;
-    }
-
-    .nav-links a::after {
-      content: '';
-      position: absolute;
-      bottom: -6px;
-      left: 0;
-      width: 0%;
-      height: 2px;
-      background: var(--primary);
-      border-radius: 2px;
-      transition: width 0.3s ease;
-    }
-
-    .nav-links a:hover {
-      color: var(--primary);
-    }
-
-    .nav-links a:hover::after {
-      width: 100%;
-    }
-
-    .hero {
-  min-height: 100vh;
-  background-image: url('assets/hero.png'); /* Pfad anpassen */
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  text-align: center;
-  color: white;
-  padding: 4rem 2rem;
-}
-
-
-    .hero h1 {
-      font-size: 2.8rem;
-      font-weight: 700;
-      margin-bottom: 1rem;
-    }
-
-    .hero p {
-      font-size: 1.2rem;
-      margin-bottom: 2rem;
-      max-width: 700px;
-    }
-
-    .cta-button {
-      display: inline-block;
-      padding: 1rem 2rem;
-      border: 2px solid var(--primary);
-      border-radius: 50px;
-      color: var(--primary);
-      background: transparent;
-      text-decoration: none;
-      font-weight: bold;
-      transition: all 0.3s ease;
-    }
-
-    .cta-button:hover {
-      background: var(--primary);
-      color: white;
-      transform: translateY(-2px);
-    }
-  </style>
+  
 </head>
 <body>
 
@@ -141,12 +18,14 @@
     <div class="nav-container">
       <img src="assets/logo.png" alt="TKSV Giengen 1986" class="logo">
       <ul class="nav-links">
-        <li><a href="#leistungen">Kader</a></li>
-        <li><a href="#ueber">Historie</a></li>
+        <li><a href="#ueber">Unser Verein</a></li>
+        <li><a href="#kader">Kader</a></li>
+        <li><a href="#sponsoren">Sponsoren</a></li>
         <li><a href="#kontakt">Kontakt</a></li>
       </ul>
     </div>
   </nav>
+  
 
   <!-- Hero Section -->
   <header class="hero" id="start">
@@ -429,6 +308,18 @@
     </div>
   </section>
     
+  
+  <section id="sponsoren" class="sponsoren-section">
+    <div class="sponsoren-container">
+      <h2>Unsere Sponsoren</h2>
+      <div class="sponsoren-grid">
+        <img src="assets/keyf.jpeg.webp" alt="Sponsor 1">
+        <img src="assets/keyf.jpeg.webp" alt="Sponsor 2">
+        <img src="assets/keyf.jpeg.webp" alt="Sponsor 3">
+        <img src="assets/keyf.jpeg.webp" alt="Sponsor 4">
+      </div>
+    </div>
+  </section>
   
   
   <section id="kontakt" class="kontakt-section">
