--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <!-- Navigation -->
   <nav>
     <div class="nav-container">
-      <img src="assets/logo.png" alt="TKSV Giengen 1986" class="logo">
+      <a href="#start">
+        <img src="assets/logo.png" alt="TKSV Giengen 1986" class="logo">
+      </a>      
       <ul class="nav-links">
         <li><a href="#ueber">Unser Verein</a></li>
         <li><a href="#kader">Kader</a></li>
@@ -30,6 +32,7 @@
   <!-- Hero Section -->
   <header class="hero" id="start">
     <div class="hero-overlay"></div>
+    <div class="hero-text-bg">
     
     <h1>Ein Verein. Zwei Teams. Volle Leidenschaft.</h1>
     <p>Herzlich Willkommen!</p>
