unser kader Text angepasst

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
           <li><strong>2000:</strong> Aufstieg in die Kreisliga A – ungeschlagen</li>
           <li><strong>2007:</strong> Abstieg in die Kreisliga B</li>
           <li><strong>2013/14:</strong> Aufstieg zurück in die Kreisliga A über die Relegation</li>
-          <li><strong>2013/14:</strong> Reservemannschaft wird Vizemeister in der Kreisliga B</li>
+          <li><strong>2013/14:</strong> Reservemannschaft wird Meister in der Kreisliga B</li>
         </ul>
         
-        <p style="margin-top: 1.5rem;"><em>Ein Verein. Zwei Teams. Eine Familie.</em><br> Daran hat sich seit 1986 nichts geändert – und das wird auch so bleiben.</p>
+        <p style="margin-top: 1.5rem;"><em>Ein Verein. Zwei Teams. Eine Familie.</em></p>
         
       </div>
     </div>
