--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
       <a href="#start">
         <img src="assets/logo.png" alt="TKSV Giengen 1986" class="logo">
       </a>      
+      <!-- Hamburger Button -->
+<div class="burger" onclick="toggleMenu()">
+  <i class="fas fa-bars"></i>
+</div>
+
       <ul class="nav-links">
         <li><a href="#ueber">Unser Verein</a></li>
         <li><a href="#soziales">Soziales</a></li>
@@ -244,6 +249,11 @@
     </div>
   </footer>
   
+  <script>
+    function toggleMenu() {
+      document.querySelector('.nav-links').classList.toggle('show');
+    }
+  </script>
   
 
 </body>
