Sponsorenbereich mit Text & Logos modernisiert

--- a/index.html
+++ b/index.html
@@ -182,6 +182,10 @@
   <section id="sponsoren" class="sponsoren-section">
     <div class="sponsoren-container">
       <h2>Unsere Sponsoren</h2>
+      <p style="text-align: center; max-width: 800px; margin: 0 auto 3rem; font-size: 1.1rem; color: var(--text-secondary);">
+        Ohne starke Partner wäre vieles nicht möglich. <strong>Ein herzliches Dankeschön</strong> an unsere Sponsoren, 
+        die uns Jahr für Jahr den Rücken stärken – sei es mit finanzieller Hilfe, Sachspenden oder Dienstleistungen.
+      </p>
       <div class="sponsoren-grid">
         <img src="assets/keyf.jpeg.webp" alt="Sponsor 1">
         <img src="assets/keyf.jpeg.webp" alt="Sponsor 2">
@@ -190,6 +194,10 @@
       </div>
     </div>
   </section>
+  
+  
+
+
   
   
   <section id="kontakt" class="kontakt-section">
