Kontaktbereich modernisiert + farbliche Trennung ergänzt

--- a/index.html
+++ b/index.html
@@ -203,18 +203,24 @@
   <section id="kontakt" class="kontakt-section">
     <div class="kontakt-container">
       <h2>Kontakt</h2>
-      <p>Du hast Fragen oder möchtest ein Projekt starten? Schreib mir einfach!</p>
+      <p>Schreib uns oder folge uns auf Social Media:</p>
   
-      <form class="kontakt-form" action="mailto:support@streamvibe.de" method="POST" enctype="text/plain">
-        <div class="form-group">
-          <input type="text" name="name" placeholder="Dein Name" required>
-          <input type="email" name="email" placeholder="Deine E-Mail" required>
-        </div>
-        <textarea name="nachricht" rows="5" placeholder="Deine Nachricht" required></textarea>
-        <button type="submit" class="cta-button">Nachricht senden</button>
-      </form>
+      <div class="kontakt-icons">
+        <a href="mailto:support@streamvibe.de" target="_blank" aria-label="E-Mail">
+          <i class="fas fa-envelope"></i>
+        </a>
+        <a href="https://www.instagram.com/tksvgiengen/" target="_blank" aria-label="Instagram">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://www.facebook.com/TKSVGiengen1986/" target="_blank" aria-label="Facebook">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+      </div>
     </div>
   </section>
+  
+  
+  
   
   <footer class="footer">
     <div class="footer-content">
