Full Upload: index.html, style.css, assets

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <section id="ueber" class="about-section">
     <div class="about-grid">
       <div class="about-image">
-        <img src="assets/mannschaftsfoto.jpg" alt="TKSV Giengen Logo" />
+        <img src="assets/hero1.png" alt="TKSV Giengen Logo" />
       </div>
       <div class="about-text">
         <h2>Unser Verein</h2>
