Website-Update: neue Player Cards, Bildkorrekturen, Mobilfix

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
   <section id="ueber" class="about-section">
     <div class="about-grid">
       <div class="about-image">
-        <img src="assets/hero1.png" alt="TKSV Giengen Logo" />
-      </div>
+        <img class="about-img" src="assets/verein.jpg.webp" alt="Unser Verein">
+      </div>      
       <div class="about-text">
         <h2>Unser Verein</h2>
         <p>Wir schreiben das Jahr 1986: Aus einer kleinen, fußballverrückten Gemeinschaft entstand der <strong>Türkische
