Überschriften für Verein, Sponsoren und Kontakt auf gleiche Größe wie 'Unser Kader' gesetzt

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <img class="about-img" src="assets/verein.jpg.webp" alt="Unser Verein">
       </div>
       <div class="about-text">
-        <h2>Unser Verein</h2>
+        <h2 class="section-heading">Unser Verein</h2>
         <p>Wir schreiben das Jahr 1986: Aus einer kleinen, fußballverrückten Gemeinschaft entstand der <strong>Türkische
             Kultur- und Sportverein Giengen</strong> – heute bekannt als <strong>TKSV Giengen 1986</strong>. Seither
           stehen wir für Leidenschaft, Teamgeist und echten Zusammenhalt – auf und neben dem Platz.</p>
@@ -517,7 +517,7 @@
 
   <section id="sponsoren" class="sponsoren-section">
     <div class="sponsoren-container">
-      <h2>Unsere Sponsoren</h2>
+      <h2 class="section-heading">Unsere Sponsoren</h2>
       <p
         style="text-align: center; max-width: 800px; margin: 0 auto 3rem; font-size: 1.1rem; color: var(--text-secondary);">
         Ohne starke Partner wäre vieles nicht möglich. <strong>Ein herzliches Dankeschön</strong> an unsere Sponsoren,
@@ -539,21 +539,30 @@
 
   <section id="kontakt" class="kontakt-section">
     <div class="kontakt-container">
-      <h2>Kontakt</h2>
+      <h2 class="section-heading">Kontakt</h2>
       <p>Schreib uns oder folge uns auf Social Media:</p>
-
-      <div class="kontakt-icons">
+    <div class="kontakt-icons">
+      <div class="kontakt-item">
         <a href="mailto:support@streamvibe.de" target="_blank" aria-label="E-Mail">
           <i class="fas fa-envelope"></i>
+          <div class="icon-label">E-Mail</div>
         </a>
+      </div>
+      <div class="kontakt-item">
         <a href="https://www.instagram.com/tksvgiengen/" target="_blank" aria-label="Instagram">
           <i class="fab fa-instagram"></i>
+          <div class="icon-label">Instagram</div>
         </a>
+      </div>
+      <div class="kontakt-item">
         <a href="https://www.facebook.com/TKSVGiengen1986/" target="_blank" aria-label="Facebook">
           <i class="fab fa-facebook-f"></i>
+          <div class="icon-label">Facebook</div>
         </a>
       </div>
     </div>
+    
+    
   </section>
 
 
